--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -24,6 +24,28 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="VisualStateGroup">
+                <VisualState x:Name="VisualStateNarrow">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource NarrowMinWidth}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="ThreadPreviewPopup.PopupMargin" Value="5" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="VisualStateNormal">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource NormalMinWidth}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="ThreadPreviewPopup.PopupMargin" Value="24, 5, 24, 5" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -38,7 +60,11 @@
             </interactivity:Interaction.Behaviors>
         </controls:PageHeader>
         <pa:ProgressIndicatorControl Grid.Row="1" ViewModel="{x:Bind ViewModel.Update.Progress, Mode=OneWay}" ShowMessage="True" />
-        <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}">
-        </pa:BoardThreadRefList>
+        <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" />
+        <pa:ContentPopup Grid.Row="2" x:Name="ThreadPreviewPopup">
+            <pa:ContentPopup.ViewContent>
+                <pa:PostCollectionView x:Name="ThreadPreview" MaxLines="20" ShowCounter="True" ShowPreviewSeparator="True" />
+            </pa:ContentPopup.ViewContent>
+        </pa:ContentPopup>
     </Grid>
 </Page>
