Исправления ошибок + доработки дизайна + нормализация дизайна для телефонной версии

--- a/DvachBrowser3/Views/BoardInfoPage.xaml
+++ b/DvachBrowser3/Views/BoardInfoPage.xaml
@@ -37,8 +37,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}"
-                             Content="Информация о доске">
+        <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}" FontWeight="Bold"
+                             Content="ИНФОРМАЦИЯ О ДОСКЕ">
             <Interactivity:Interaction.Behaviors>
                 <behaviors:EllipsisBehavior Visibility="Collapsed" />
             </Interactivity:Interaction.Behaviors>
