--- a/DvachBrowser3/Styles/Custom.xaml
+++ b/DvachBrowser3/Styles/Custom.xaml
@@ -1,4 +1,5 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="using:Template10.Controls">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="using:Template10.Controls"
+                    xmlns:interactivity="using:Microsoft.Xaml.Interactivity" xmlns:behaviors="using:DvachBrowser3.Behaviors">
 
     <x:Double x:Key="NarrowMinWidth">0</x:Double>
     <x:Double x:Key="NormalMinWidth">521</x:Double>
@@ -26,16 +27,22 @@
             SelectedBackground="{ThemeResource SystemControlHighlightListAccentLowBrush}"
             SelectedForeground="{ThemeResource SystemControlHighlightAltBaseHighBrush}"
             SelectedPointerOverBackground="{ThemeResource SystemControlHighlightListAccentMediumBrush}"
-            PressedBackground="{ThemeResource SystemControlHighlightListMediumBrush}"
+            PressedBackground="Transparent"
             SelectedPressedBackground="{ThemeResource SystemControlHighlightListAccentHighBrush}"
             DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
             DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
             ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
             HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-            ContentMargin="{TemplateBinding Padding}"
-            CheckMode="Inline"/>
+            CheckMode="Inline">
+            <interactivity:Interaction.Behaviors>
+                <behaviors:CleanListContentMarginBehavior NarrowThickness="{StaticResource CleanListPaddingNarrow}" NormalThickness="{StaticResource CleanListPadding}" />
+            </interactivity:Interaction.Behaviors>
+        </ListViewItemPresenter>
     </ControlTemplate>
+
+    <Thickness x:Key="CleanListPaddingNarrow">0, 0, 0, 0</Thickness>
+    <Thickness x:Key="CleanListPadding">0, 0, 12, 0</Thickness>
 
 
     <ResourceDictionary.ThemeDictionaries>
