--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -53,17 +53,17 @@
         </Grid.RowDefinitions>
 
         <!--  header  -->
-        <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}"
-                             Content="{x:Bind ViewModel.TitleWithPage, Mode=OneWay}">
+        <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}" FontWeight="Bold"
+                             Content="ДОСКА">
             <interactivity:Interaction.Behaviors>
                 <behaviors:EllipsisBehavior Visibility="Collapsed" />
             </interactivity:Interaction.Behaviors>
         </controls:PageHeader>
         <pa:ProgressIndicatorControl Grid.Row="1" ViewModel="{x:Bind ViewModel.Update.Progress, Mode=OneWay}" ShowMessage="True" />
-        <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" />
+        <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" Margin="4, 4, 4, 0" ListTitle="{x:Bind ViewModel.TitleWithPage, Mode=OneWay}" /> 
         <pa:ContentPopup Grid.Row="2" x:Name="ThreadPreviewPopup">
             <pa:ContentPopup.ViewContent>
-                <pa:PostCollectionView x:Name="ThreadPreview" MaxLines="20" ShowCounter="True" ShowPreviewSeparator="True" />
+                <pa:PostCollectionView x:Name="ThreadPreview" MaxLines="20" ShowCounter="False" ShowPreviewSeparator="True" ShowFullThreadText="Перейти в тред" />
             </pa:ContentPopup.ViewContent>
         </pa:ContentPopup>
     </Grid>
