--- a/DvachBrowser3/Views/Partial/ContentPopup.xaml
+++ b/DvachBrowser3/Views/Partial/ContentPopup.xaml
@@ -38,15 +38,27 @@
         <Border.Background>
             <SolidColorBrush Color="Black" Opacity="0.5" />
         </Border.Background>
-        <Border BorderThickness="1, 1, 1, 1" Padding="4" Margin="{x:Bind PopupMargin}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" x:Name="Body">
-            <Border.RenderTransform>
+        <Grid Margin="{x:Bind PopupMargin, Mode=OneWay}">
+            <Grid.RenderTransform>
                 <TranslateTransform x:Name="BodyScale" X="0" Y="0" />
-            </Border.RenderTransform>
-            <Border.BorderBrush>
-                <SolidColorBrush Color="{ThemeResource SystemColorWindowTextColor}" Opacity="0.66" />
-            </Border.BorderBrush>
-            <ContentPresenter Content="{x:Bind ViewContent}" ContentTemplate="{x:Bind ViewContentTemplate, Mode=OneWay}" ContentTemplateSelector="{x:Bind ViewContentTemplateSelector, Mode=OneWay}"/>
-        </Border>
+            </Grid.RenderTransform>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="100*" />
+            </Grid.RowDefinitions>
+            <Button Grid.Row="0" Margin="0, 5, 0, 5" HorizontalAlignment="Right" Visibility="{x:Bind IsHardwareBackButtonPresent, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=true}"
+                    Background="Transparent" MinWidth="48" ToolTipService.ToolTip="Закрыть" Click="CloseButton_OnClick">
+                <Viewbox Height="16" Width="16">
+                    <SymbolIcon Symbol="Clear" Foreground="White" />
+                </Viewbox>
+            </Button>
+            <Border Grid.Row="1" BorderThickness="1, 1, 1, 1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" x:Name="Body" Padding="4">
+                <Border.BorderBrush>
+                    <SolidColorBrush Color="{ThemeResource SystemColorWindowTextColor}" Opacity="0.66" />
+                </Border.BorderBrush>
+                <ContentPresenter Content="{x:Bind ViewContent}" ContentTemplate="{x:Bind ViewContentTemplate, Mode=OneWay}" ContentTemplateSelector="{x:Bind ViewContentTemplateSelector, Mode=OneWay}"/>
+            </Border>
+        </Grid>
     </Border>
 </UserControl>
